discussion/kv_engine/156700/156700_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38978: Gather "dcpagg" stats group in a background task

The "dcpagg" stats group includes per-connection-type aggregated values
which may become expensive to collect if there are lots of dcp streams.

To avoid this processing holding up a front end thread, move this
aggregation to a task.

Change-Id: Ib365c85d537d54e9ef0777dd84aa425004b8576c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-02 13:09:30.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-02 13:34:04.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/139/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(3904): error C2065: "ep": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/139/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/82/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3904:59: error: use of undeclared identifier "ep" [clang-diagnostic-error]
                    CBStatCollector col(add_stat, cookie, ep->getServerApi());
                                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3905:21: error: use of undeclared identifier "ep" [clang-diagnostic-error]
                    ep->doConnAggStatsInner(col.forBucket(ep->getName()),
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3905:59: error: use of undeclared identifier "ep" [clang-diagnostic-error]
                    ep->doConnAggStatsInner(col.forBucket(ep->getName()),
                                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/82/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3904:59:
error: use of undeclared identifier "ep" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/82/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/91/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3904:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/91/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/87/ : FAILURE

Compile error at [2021-07-02T13:29:05.599Z] ../kv_engine/engines/ep/src/ep_engine.cc:3904:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/87/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/87/ : FAILURE

Compile error at [2021-07-02T13:11:25.872Z] ../kv_engine/engines/ep/src/ep_engine.cc:3904:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/87/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/87/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/90/ : FAILURE

Compile error at [2021-07-02T13:31:54.626Z] ../kv_engine/engines/ep/src/ep_engine.cc:3904:59:
error: use of undeclared identifier "ep"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/90/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/88/ : FAILURE

Compile error at [2021-07-02T13:31:16.690Z] ../kv_engine/engines/ep/src/ep_engine.cc:3904:59:
error: ?ep? was not declared in this scope; did you mean ?sep??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/88/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8992/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
